telegram/Chart/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: telegramm
  namespace: telegramm
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: telegramm.example.ru
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: telegramm
            port:
              number: 8080
